testing/errors/toolateforpostfix2.a
;ACME 0.96.5
	*=$1000
label
	b = label	; read symbol
label+2	; -> too late for postfix
